# decentralizepy

./: .gitignore  36_nodes.edges  LICENSE  README.rst  config.ini  download_dataset.py  generate_graph.py  install_nMachines.sh  ip_addr.json  leaf.sh  main.ipynb  run.py  setup.cfg  setup.py  split_into_files.py  testing.py
eval/: 192_regular.edges  4_node_fullyConnected.edges  6_star.edges  80_nodes.edges  96_node_fullyConnected.edges  96_nodes.edges  96_nodes_random1.edges  96_nodes_random2.edges  96_regular.edges  config.ini  config_celeba.ini  config_celeba_100.ini  config_celeba_grow.ini  config_femnist.ini  config_femnist_100.ini  config_femnist_grow.ini  graph.adj  ip_addr_3Machines.json  ip_addr_4Machines.json  ip_addr_5Machines.json  ip_addr_7Machines.json  main.ipynb  plot.py  plot_model.py  plot_percentile.py  plot_shared.py  plotting_from_csv.py  run.sh  run_all.sh  run_celeba_synchronous.sh  run_grid.sh  run_xtimes.sh  run_xtimes_celeba.sh  run_xtimes_cifar.sh  run_xtimes_femnist.sh  run_xtimes_reddit.sh  run_xtimes_shakespeare.sh  testing.py  testingFederated.py  testingKFN.py  (+6 more)
eval/epoch_configs/: config_celeba.ini  config_celeba_100.ini  config_celeba_grow.ini  config_femnist.ini  config_femnist_100.ini  config_femnist_grow.ini
eval/step_configs/: config_CIFAR.ini  config_CIFAR_topk.ini  config_CIFAR_wavelet.ini  config_celeba.ini  config_celeba_100.ini  config_celeba_fft.ini  config_celeba_grow.ini  config_celeba_jwins.ini  config_celeba_manualadapt.ini  config_celeba_partialmodel.ini  config_celeba_randomalpha.ini  config_celeba_randomalphainc.ini  config_celeba_roundrobin.ini  config_celeba_sharing.ini  config_celeba_subsampling.ini  config_celeba_synchronous.ini  config_celeba_topkacc.ini  (+40 more)
logs/: config_celeba_sharing.ini
tutorial/: config.ini  config_celeba_sharing.ini  ip.json  run_decentralized.sh  run_federated.sh
(+97 files in other folders)
